2003-10-27  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: check we can get kernel interface

2003-10-27  John Levon  <levon@movementarian.org>

	* daemon/liblegacy/Makefile.am: remove unneeded
	-I for abi

2003-10-27  John Levon  <levon@movementarian.org>

	* daemon/init.c:
	* daemon/opd_perfmon.c: move timer interrupt checks
	into perfmon

2003-10-27  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: use op_get_interface()

	* libop/op_get_interface.c: simplify

2003-10-26  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/ui/oprof_start.base.ui:
	* gui/oprof_start.cpp:
	* gui/oprof_start.h: check separate_lib checkbox when
	  separate_kernel_cb is checked

2003-10-26  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: allow to reset --image through empty --image=
	  or --image

2003-10-26  John Levon  <levon@movementarian.org>

	* daemon/opd_cookie.c: reduce the hash table size somewhat

	* various: fixes for doxygen

2003-10-26  John Levon  <levon@movementarian.org>

	* HACKING:
	* configure.in:
	* Makefile.am:
	* dae/: move all of 2.4 daemon code to ...

	* daemon/liblegacy/: here

	* daemon/Makefile.am:
	* daemon/opd_util.h:
	* daemon/opd_util.c: move to ...

	* daemon/oprofiled.h:
	* daemon/oprofiled.c: here, and call the right operations
	depending upon oprofile kernel version.

	* daemon/init.c:
	* daemon/liblegacy/init.c: init and running for each version

2003-10-26  John Levon  <levon@movementarian.org>

	* daemon/opd_cookie.c: make sure to create the
	cookie for the ignore value if it's not found

	* daemon/opd_sfile.c: simplify ignored logic

2003-10-26  John Levon  <levon@movementarian.org>

	* doc/internals.xml:
	* doc/buffers.png: add a diagram

2003-10-26  Philippe Elie  <phil.el@wanadoo.fr>

	implement image filtering:

	* dae/opd_image.h: add a field filtered
	* dae/opd_image.c: set it at image creation
	* dae/opd_proc.c: don't record sample when !image->filtered

	* daemon/opd_cookie.h: add a field filtered